--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -3,5 +3,6 @@
     [movie] = "movie"
     (movieSelected) = 'onMovieSelected($event)'>
 </app-movie-item>
-    <p>{{selectedMovie}}</p>
 </div>
+<p>Peli seleccionada: {{selectedMovie}}</p>
+
