--- a/src/app/movie-item/movie-item.component.html
+++ b/src/app/movie-item/movie-item.component.html
@@ -1,6 +1,6 @@
 <div class="movie-card">
-    <img *ngIf="movie.image" [src]="movie.image" alt="{{ movie.title }}" class="movie-image" />
-    <div class="movie-info">
+    <img *ngIf="movie?.image" [src]="movie.image" alt="{{ movie.title }}" class="movie-image" />
+    <div class="movie-info" *ngIf="movie" >
       <h3>{{ movie.title }}</h3>
       <p>Año: {{ movie.year }}</p>
       <p *ngIf="movie.description">Descripción: {{ movie.description }}</p>
